# -*- python -*-

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "franka_driver",
    srcs = [
        "franka_driver.cc",
    ],
    deps = [
    	"@gflags",
        "@lcm",
        "@lcmtypes_bot2_core",
        "@lcmtypes_robotlocomotion",
        "@libfranka",
    ],
)
